final changes are made

--- a/week1.html
+++ b/week1.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="icon" type="image/png" href="assets/favicon.png">
   <title>Week 1 – WTMA Lab</title>
 
   <link rel="stylesheet" href="css/styles.css">
@@ -28,13 +29,7 @@
     <h2 style="margin-bottom:24px;">Week 1 – Lab Schedule</h2>
 
     <div class="day-grid">
-      <div class="day-card">Day 1 – WTMA Introduction</div>
-      <div class="day-card">Day 2 – HTML Basics</div>
-      <div class="day-card">Day 3 – CSS Fundamentals</div>
-      <div class="day-card">Day 4 – Forms & Inputs</div>
-      <div class="day-card">Day 5 – JavaScript Basics</div>
-      <div class="day-card">Day 6 – DOM Manipulation</div>
-      <div class="day-card">Day 7 – Mini Practice</div>
+      <a href="day-1.html" style="text-decoration: none;">Day 1 – WTMA Introduction</a>
     </div>
   </div>
 </main>
