--- a/index.html
+++ b/index.html
@@ -77,38 +77,72 @@
 
 <!-- HERO SECTION 2 : LAB EXPERIMENTS -->
 
+<!-- HERO SECTION 2 : LAB EXPERIMENTS -->
+<<!-- HERO SECTION 2 : LAB EXPERIMENTS -->
 <section class="lab-hero">
   <div class="container lab-hero-content">
 
-    <div class="lab-text">
-      <h2>Lab Experiments</h2>
-      <p>
-        Access week-wise WTMA lab experiments with structured
-        daily objectives, exercises, and practical learning.
-        To produce globally competent professionals, motivated to learn the emerging technologies and to be
-         innovative in solving real world problems. 
-      </p>
+    <h2>Lab Experiments</h2>
 
-      <a href="week1.html" class="secondary-btn">
-        Week 1
-      </a>
-      <a href="week1.html" class="secondary-btn">
-        Week 2
-      </a>
-      <a href="week1.html" class="secondary-btn">
-        Week 3
-      </a>
-      <a href="week1.html" class="secondary-btn">
-        Week 4
-      </a>
+    <p class="lab-desc">
+      Access week-wise WTMA lab experiments with structured daily objectives
+      and practical learning outcomes.
+    </p>
+
+    <a href="week1.html" class="secondary-btn">
+      Week 1
+    </a>
+
+  </div>
+</section>
+
+<!-- SECTION 3 : LAB SUBMISSION SCHEDULE -->
+<section class="lab-schedule-section">
+  <div class="container">
+
+    <!-- Section Header -->
+    <div class="schedule-header">
+      <h3>Lab Experiment Submission Schedule</h3>
+      <span class="badge">Academic Year 2025–26</span>
     </div>
 
-    <div class="lab-image">
-      <img src="assets/rec-aadhi.webp" alt="REC Mascot">
+    <!-- Instruction -->
+    <p class="schedule-note">
+      Follow this schedule to submit your lab experiments on time.
+      Download the manuals and upload your work using the provided links.
+    </p>
+
+    <!-- Table -->
+    <div class="table-wrapper">
+      <table class="lab-table">
+        <thead>
+          <tr>
+            <th>Lab No.</th>
+            <th>Experiment Name</th>
+            <th>Scheduled Date</th>
+            <th>Resources / Submission</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>01</td>
+            <td>Introduction to HTML using VS Code Editor</td>
+            <td>01-07-2026</td>
+            <td class="action-cell">
+              <button class="btn-outline">Download Lab Manual</button>
+              <button class="btn-success">Upload Screen Output</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
   </div>
 </section>
+
+
+
 
 
 
