final changes are made

--- a/week1.html
+++ b/week1.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <style>
+      body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+  .main-content {
+  flex: 1;  
+  }
+  footer {
+    width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+    </style>
 
 <header class="header">
   <div class="container header-content">
@@ -29,7 +45,7 @@
     <h2 style="margin-bottom:24px;">Week 1 – Lab Schedule</h2>
 
     <div class="day-grid">
-      <a href="day-1.html" style="text-decoration: none;">Day 1 – WTMA Introduction</a>
+      <a href="day-1.html" class="secondary-btn"> WTMA Introduction</a>
     </div>
   </div>
 </main>
