--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
 </section>
 
 <!-- HERO SECTION 2 : LAB EXPERIMENTS -->
-
-<!-- HERO SECTION 2 : LAB EXPERIMENTS -->
-<<!-- HERO SECTION 2 : LAB EXPERIMENTS -->
 <section class="lab-hero">
   <div class="container lab-hero-content">
 
@@ -89,11 +86,14 @@
       and practical learning outcomes.
     </p>
 
-    <a href="week1.html" class="secondary-btn">
-      Week 1
-    </a>
+   <div class="week-day-nav">
+  <a href="week1.html" class="secondary-btn">Week 1</a>
 
-  </div>
+  <a href="day-1.html" class="secondary-btn-2">
+    Day 1 – WTMA Introduction
+  </a>
+</div>
+
 </section>
 
 <!-- SECTION 3 : LAB SUBMISSION SCHEDULE -->
